<resources>
    <string name="app_name">Satia</string>

    <string name="connected_with_wifi">Connected with wifi</string>
    <string name="connected_with_mobile">Connected with mobile network</string>
    <string name="connected_with_ethernet">Connected with ethernet</string>
    <string name="you_are_offline">Yout are offline.Please check your internet connection.</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="qr_permission">Please grant camera permission to use the QR Scanner</string>
    <string name="email">Please enter your email</string>
    <string name="passwords">Please enter your password</string>
    <string name="type">Type</string>
    <string name="quality">Quality</string>
    <string name="lotnumber">Lot Number</string>
    <string name="gsm">GSM</string>
    <string name="noifsheet">No. of Sheet</string>
    <string name="reamweight">Ream Weight</string>
    <string name="reamunit">No. of Ream Unit</string>
    <string name="palletsunit">No. of Unit Pallets</string>
    <string name="palletunit">Pallet Weight</string>
    <string name="na">NA</string>
    <string name="size">Size</string>

</resources>